# je2be-desktop

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG  CHANGELOG.ja-JP  CMakeLists.txt  Makefile  README.md  fmt  je2be.jucer  ls-files  setup.bat
.github/workflows/: main.yml
Builds/: jucer-post-save.bat
Builds/Package/: Package.StoreAssociation.xml  Package.appxmanifest  Package.appxmanifest.in  Package.wapproj
Resource/: japanese.lang
Source/: AboutComponent.cpp  AboutComponent.h  Application.cpp  B2JChooseInputComponent.cpp  B2JChooseInputComponent.h  B2JChooseOutputComponent.cpp  B2JChooseOutputComponent.h  B2JConfigComponent.cpp  B2JConfigComponent.h  B2JConvertProgressComponent.cpp  B2JConvertProgressComponent.h  B2JCopyProgressComponent.cpp  B2JCopyProgressComponent.h  ChooseInputComponent.cpp  ChooseInputComponent.h  ChooseOutputComponent.cpp  ChooseOutputComponent.h  CommandID.h  ComponentState.h  ConfigComponent.cpp  ConfigComponent.h  Constants.h  ConvertProgressComponent.cpp  ConvertProgressComponent.h  CopyProgressComponent.cpp  CopyProgressComponent.h  DrawableTextComponent.h  File.h  GameDirectories.h  GameDirectory.h  GameDirectoryScanThreadBedrock.cpp  GameDirectoryScanThreadBedrock.h  GameDirectoryScanThreadJava.cpp  GameDirectoryScanThreadJava.h  J2BChooseInputComponent.cpp  J2BChooseInputComponent.h  J2BChooseOutputComponent.cpp  J2BChooseOutputComponent.h  J2BConfigComponent.cpp  J2BConfigComponent.h  (+18 more)
resource/: chinese.lang  ja-JP.lang  japanese.lang  zh-Hans.lang
src/: AboutComponent.cpp  AccountScanThread.cpp  AccountScanThread.h  Application.cpp  AsyncHandler.h  AsyncUpdaterWith.h  B2JChooseInputComponent.cpp  B2JChooseOutputComponent.cpp  B2JChooseOutputComponent.h  B2JConfigComponent.cpp  B2JConvertProgressComponent.h  B2JCopyProgressComponent.cpp  BedrockGameDirectoryScanWorker.cpp  BedrockGameDirectoryScanWorker.h  CommandID.h  ComponentState.h  Constants.h  File.h  GameDirectory.h  GameDirectoryScanThreadBedrock.cpp  GameDirectoryScanThreadBedrock.h  GameDirectoryScanThreadJava.cpp  GameDirectoryScanThreadJava.h  GameDirectoryScanThreadXbox360.cpp  GameDirectoryScanThreadXbox360.h  GameDirectoryScanWorkerBedrock.cpp  GameDirectoryScanWorkerBedrock.h  GameDirectoryScanWorkerJava.cpp  GameDirectoryScanWorkerJava.h  GameDirectoryScanWorkerXbox360.cpp  GameDirectoryScanWorkerXbox360.h  J2BChooseOutputComponent.h  J2BConfigComponent.h  J2BCopyProgressComponent.h  JavaGameDirectoryScanWorker.cpp  JavaGameDirectoryScanWorker.h  LocalizationHelper.cpp  LocalizationHelper.h  LookAndFeel.cpp  LookAndFeel.h  (+13 more)
src/component/: About.cpp  About.h  AboutComponent.cpp  AboutComponent.h  ChooseBedrockInput.cpp  ChooseBedrockInput.h  ChooseBedrockOutput.cpp  ChooseBedrockOutput.h  ChooseJavaInput.cpp  ChooseJavaInput.h  ChooseJavaOutput.cpp  ChooseJavaOutput.h  ChoosePS3Input.cpp  ChoosePS3Input.h  ChooseXbox360Input.cpp  ChooseXbox360Input.h  ConvertProgress.cpp  ConvertProgress.h  CopyBedrockArtifactProgress.cpp  CopyBedrockArtifactProgress.h  CopyJavaArtifactProgress.cpp  CopyJavaArtifactProgress.h  DrawableText.h  MainWindow.cpp  MainWindow.h  ModeSelect.cpp  ModeSelect.h  ModeSelectComponent.cpp  ModeSelectComponent.h  SearchLabel.cpp  SearchLabel.h  SelectInputType.cpp  SelectInputType.h  TextButton.h  ToBedrockConfig.cpp  ToBedrockConfig.h  ToJavaConfig.cpp  ToJavaConfig.h
src/component/b2j/: B2JChooseInput.cpp  B2JChooseInput.h  B2JChooseInputComponent.cpp  B2JChooseInputComponent.h  B2JChooseOutput.cpp  B2JChooseOutput.h  B2JChooseOutputComponent.cpp  B2JChooseOutputComponent.h  B2JConfig.cpp  B2JConfig.h  B2JConfigComponent.cpp  B2JConfigComponent.h  B2JConvertProgress.cpp  B2JConvertProgress.h  B2JConvertProgressComponent.cpp  B2JConvertProgressComponent.h  B2JCopyProgress.cpp  B2JCopyProgress.h  B2JCopyProgressComponent.cpp  B2JCopyProgressComponent.h
src/component/j2b/: J2BChooseInput.cpp  J2BChooseInput.h  J2BChooseInputComponent.cpp  J2BChooseInputComponent.h  J2BChooseOutput.cpp  J2BChooseOutput.h  J2BChooseOutputComponent.cpp  J2BChooseOutputComponent.h  J2BConfig.cpp  J2BConfig.h  J2BConfigComponent.cpp  J2BConfigComponent.h  J2BConvertProgress.cpp  J2BConvertProgress.h  J2BConvertProgressComponent.cpp  J2BConvertProgressComponent.h  J2BCopyProgress.cpp  J2BCopyProgress.h  J2BCopyProgressComponent.cpp
src/component/p2b/: P2BConvertProgress.cpp  P2BConvertProgress.h
src/component/p2j/: P2JConvertProgress.cpp  P2JConvertProgress.h
src/component/x2b/: X2BConfig.cpp  X2BConfig.h  X2BConvertProgress.cpp  X2BConvertProgress.h
src/component/x2j/: X2JConfig.cpp  X2JConfig.h  X2JConvertProgress.cpp  X2JConvertProgress.h
tool/: ComposeFont.cpp
